tituloschart/templates/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: titulos-web
  namespace: tituloshelm
spec:
  selector:
    matchLabels:
      app: titulos-web
  serviceName: titulos-web-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: titulos-web
        log: graylog
    spec:
      containers:
        - name: titulosk8s
          image: registry.desarrollo.unlp.edu.ar/desarrollo-cespi/unlp_titulos/web:4.9.2-dev
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: titulos-files
              mountPath: /app/private
      imagePullSecrets:
        - name: cespi-registry
      volumes:
      - name: titulos-files
        persistentVolumeClaim:
          claimName: titulosk8s-web
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: titulos-wrk
  namespace: tituloshelm
spec:
  selector:
    matchLabels:
      app: titulos-wrk
  serviceName: titulos-web-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: titulos-wrk
        log: graylog
    spec:
      containers:
        - name: titulosk8s-wrk
          image: registry.desarrollo.unlp.edu.ar/desarrollo-cespi/unlp_titulos/worker:4.9.2-dev
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: titulos-files
              mountPath: /app/private
      imagePullSecrets:
        - name: cespi-registry
      volumes:
      - name: titulos-files
        persistentVolumeClaim:
          claimName: titulosk8s-web
---
apiVersion: v1
kind: Service
metadata:
  name: mysqltitulosk8s
  namespace: tituloshelm
  labels:
    app: titulos-web
spec:
  ports:
    - port: 3306
  selector:
    app: titulos-web
    tier: mysql
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: tituloshelm
  labels:
    app: titulos-web
spec:
  ports:
    - port: 6379
  selector:
    app: titulos-web
    tier: redis
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  namespace: tituloshelm
  labels:
    app: titulos-web
spec:
  selector:
    matchLabels:
      app: titulos-web
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: titulos-web
        tier: mysql
    spec:
      containers:
      - image: mysql:5.5
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: titulos-data
          mountPath: /var/lib/mysql
      volumes:
      - name: titulos-data
        persistentVolumeClaim:
          claimName: titulosk8s-mysql
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis
  namespace: tituloshelm
  labels:
    app: titulos-web
spec:
  selector:
    matchLabels:
      app: titulos-web
      tier: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: titulos-web
        tier: redis
    spec:
      containers:
      - image: redis:3-alpine
        name: redis
