tituloschart/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titulos-web
  namespace: tituloshelm
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - titulos.k8s.desarrollo.unlp.edu.ar
    secretName: titulos-tls
  rules:
  - host: titulos.k8s.desarrollo.unlp.edu.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: titulosk8sweb
            port:
              number: 3000
